--- a/minigpt4_colab.ipynb
+++ b/minigpt4_colab.ipynb
@@ -18,27 +18,29 @@
       },
       "outputs": [],
       "source": [
-        "# ✅ SETUP + FIX MiniGPT-4 in ONE CELL\n",
-        "\n",
-        "# Clone repo and prepare folders\n",
+        "# Clone and download weights\n",
         "!git clone -b dev https://github.com/camenduru/minigpt4\n",
-        "!mkdir -p /content/minigpt4/checkpoints\n",
+        "!wget https://huggingface.co/ckpt/minigpt4/resolve/main/minigpt4.pth -O /content/minigpt4/checkpoint.pth\n",
+        "!wget https://huggingface.co/ckpt/minigpt4/resolve/main/blip2_pretrained_flant5xxl.pth -O /content/minigpt4/blip2_pretrained_flant5xxl.pth\n",
         "\n",
-        "# Download weights\n",
-        "!wget https://huggingface.co/ckpt/minigpt4/resolve/main/minigpt4.pth -O /content/minigpt4/checkpoints/minigpt4.pth\n",
-        "!wget https://huggingface.co/ckpt/minigpt4/resolve/main/blip2_pretrained_flant5xxl.pth -O /content/minigpt4/checkpoints/blip2_pretrained_flant5xxl.pth\n",
+        "# First install numpy and opencv with compatible versions\n",
+        "!pip install -q numpy==1.23.5 opencv-python-headless==4.9.0.80\n",
         "\n",
-        "# Install dependencies\n",
-        "!pip install -q salesforce-lavis bitsandbytes accelerate gradio==3.27.0\n",
-        "!pip install -q git+https://github.com/huggingface/transformers.git -U\n",
+        "# Then install other dependencies\n",
+        "!pip install -q salesforce-lavis==1.0.2\n",
+        "!pip install -q bitsandbytes accelerate\n",
+        "!pip install -q gradio==3.27.0\n",
+        "!pip install -q git+https://github.com/huggingface/transformers.git@v4.26.1\n",
         "\n",
-        "# ⚠️ Fix numpy / OpenCV compatibility issue\n",
-        "!pip uninstall -y numpy opencv-python-headless\n",
-        "!pip install numpy==1.23.5 opencv-python-headless==4.9.0.80\n",
+        "# Fix potential ABI issues\n",
+        "import numpy as np\n",
+        "print(f\"NumPy version: {np.__version__}\")\n",
+        "import cv2\n",
+        "print(f\"OpenCV version: {cv2.__version__}\")\n",
         "\n",
-        "# Launch app\n",
+        "# Run app\n",
         "%cd /content/minigpt4\n",
-        "!python app.py\n"
+        "!python app.py"
       ]
     }
   ],
